practica5/src/y.output
Estado 108 conflictos: 1 desplazamiento/reducción


Gramática

    0 $accept: Programa $end

    1 $@1: %empty

    2 $@2: %empty

    3 Programa: $@1 Cabecera $@2 Bloque

    4 Cabecera: INICIO PAREN_IZQ PAREN_DER

    5 $@3: %empty

    6 Bloque: LLAVE_IZQ $@3 Declar_variables_locales Declar_funciones Sentencias LLAVE_DER

    7 Declar_variables_locales: VAR_IZQ Cuerpo_variables VAR_DER
    8                         | %empty

    9 Cuerpo_variables: Cuerpo_variables Declar_variables
   10                 | Declar_variables

   11 $@4: %empty

   12 Declar_variables: Tipo $@4 Lista_ident DELIMIT
   13                 | error

   14 Tipo: Tipo_dato
   15     | Tipo_lista

   16 Tipo_dato: TIPO

   17 Tipo_lista: TIPO_LIST Tipo_dato

   18 Lista_ident: Lista_ident SEPAR IDENT
   19            | Lista_ident error IDENT
   20            | IDENT

   21 Declar_funciones: Declar_funciones Declar_funcion
   22                 | %empty

   23 $@5: %empty

   24 Cabecera_funcion: TIPO IDENT $@5 PAREN_IZQ Lista_parametros PAREN_DER
   25                 | error

   26 $@6: %empty

   27 Declar_funcion: Cabecera_funcion $@6 Bloque

   28 $@7: %empty

   29 Lista_parametros: Lista_parametros SEPAR $@7 Parametro
   30                 | Lista_parametros error Parametro
   31                 | Parametro
   32                 | %empty

   33 Parametro: TIPO IDENT

   34 Sentencias: Sentencias Sentencia
   35           | Sentencia

   36 Sentencia: Bloque
   37          | Sentencia_asig DELIMIT
   38          | Sentencia_if
   39          | Sentencia_while
   40          | Sentencia_for
   41          | Sentencia_entrada DELIMIT
   42          | Sentencia_salida DELIMIT
   43          | Sentencia_return DELIMIT
   44          | Sentencia_iterar DELIMIT
   45          | Sentencia_comienzo DELIMIT

   46 Sentencia_asig: IDENT IGUAL Expresion

   47 Lista_expresiones: Lista_expresiones SEPAR Expresion
   48                  | Lista_expresiones error Expresion
   49                  | Expresion

   50 Expresion: PAREN_IZQ Expresion PAREN_DER
   51          | OP_UNARIO Expresion
   52          | MAS_MENOS Expresion
   53          | Expresion MAS_MENOS Expresion
   54          | Expresion OP_BIN_LISTA Expresion
   55          | Expresion OP_LIST_CONCA Expresion
   56          | Expresion OP_OR Expresion
   57          | Expresion OP_XOR Expresion
   58          | Expresion OP_AND Expresion
   59          | Expresion OP_RELACION Expresion
   60          | Expresion OP_IGUALDAD Expresion
   61          | Expresion OP_MULTI_DIV Expresion
   62          | Expresion MAS_MAS Expresion OP_GET_LIST Expresion
   63          | IDENT
   64          | Funcion
   65          | Constante
   66          | error

   67 Funcion: IDENT PAREN_IZQ Lista_expresiones PAREN_DER
   68        | IDENT PAREN_IZQ PAREN_DER

   69 Constante: CONST_BOOL
   70          | CONST_CAR
   71          | CONST_ENT
   72          | CONST_REAL
   73          | Constante_lista

   74 Constante_lista: CORCH_IZQ Lista_bool CORCH_DER
   75                | CORCH_IZQ Lista_car CORCH_DER
   76                | CORCH_IZQ Lista_ent CORCH_DER
   77                | CORCH_IZQ Lista_real CORCH_DER
   78                | CORCH_IZQ CORCH_DER

   79 Lista_bool: Lista_bool SEPAR CONST_BOOL
   80           | CONST_BOOL

   81 Lista_car: Lista_car SEPAR CONST_CAR
   82          | CONST_CAR

   83 Lista_ent: Lista_ent SEPAR CONST_ENT
   84          | CONST_ENT

   85 Lista_real: Lista_real SEPAR CONST_REAL
   86           | CONST_REAL

   87 Condicion_if: COND_SI PAREN_IZQ Expresion PAREN_DER

   88 Sentencia_if: Condicion_if Sentencia

   89 $@8: %empty

   90 Sentencia_if: Condicion_if Sentencia COND_OTRO $@8 Sentencia

   91 $@9: %empty

   92 $@10: %empty

   93 Sentencia_while: BUCLE $@9 PAREN_IZQ Expresion PAREN_DER $@10 Sentencia

   94 $@11: %empty

   95 $@12: %empty

   96 $@13: %empty

   97 $@14: %empty

   98 $@15: %empty

   99 Sentencia_for: FOR_INI $@11 Sentencia_asig $@12 FOR_STOP Expresion $@13 FOR_STEP $@14 Expresion $@15 FOR_DO Sentencia

  100 $@16: %empty

  101 Sentencia_entrada: ENTRADA $@16 Lista_ident

  102 Sentencia_salida: SALIDA Lista_expr_cadena

  103 Lista_expr_cadena: Lista_expr_cadena SEPAR Expr_cadena
  104                  | Expr_cadena

  105 Expr_cadena: Expresion
  106            | CONST_CADENA

  107 Sentencia_return: DEVUELVE Expresion

  108 Sentencia_iterar: Expresion OP_AVR_RETR

  109 Sentencia_comienzo: OP_INI_LIST Expresion


Terminales con las reglas donde aparecen

$end (0) 0
error (256) 13 19 25 30 48 66
OP_OR (258) 56
OP_XOR (259) 57
OP_AND (260) 58
OP_IGUALDAD (261) 60
OP_RELACION (262) 59
MAS_MENOS (263) 52 53
MAS_MAS (264) 62
OP_LIST_CONCA (265) 55
OP_BIN_LISTA (266) 54
OP_GET_LIST (267) 62
OP_MULTI_DIV (268) 61
OP_UNARIO (269) 51
INICIO (270) 4
PAREN_IZQ (271) 4 24 50 67 68 87 93
PAREN_DER (272) 4 24 50 67 68 87 93
CORCH_IZQ (273) 74 75 76 77 78
CORCH_DER (274) 74 75 76 77 78
LLAVE_IZQ (275) 6
LLAVE_DER (276) 6
VAR_IZQ (277) 7
VAR_DER (278) 7
DELIMIT (279) 12 37 41 42 43 44 45
SEPAR (280) 18 29 47 79 81 83 85 103
TIPO (281) 16 24 33
TIPO_LIST (282) 17
IDENT (283) 18 19 20 24 33 46 63 67 68
CONST_BOOL (284) 69 79 80
CONST_CAR (285) 70 81 82
CONST_CADENA (286) 106
CONST_ENT (287) 71 83 84
CONST_REAL (288) 72 85 86
IGUAL (289) 46
COND_SI (290) 87
COND_OTRO (291) 90
BUCLE (292) 93
FOR_INI (293) 99
FOR_STOP (294) 99
FOR_STEP (295) 99
FOR_DO (296) 99
ENTRADA (297) 101
SALIDA (298) 102
DEVUELVE (299) 107
OP_INI_LIST (300) 109
OP_AVR_RETR (301) 108


No terminales con las reglas donde aparecen

$accept (47)
    en la izquierda: 0
Programa (48)
    en la izquierda: 3, en la derecha: 0
$@1 (49)
    en la izquierda: 1, en la derecha: 3
$@2 (50)
    en la izquierda: 2, en la derecha: 3
Cabecera (51)
    en la izquierda: 4, en la derecha: 3
Bloque (52)
    en la izquierda: 6, en la derecha: 3 27 36
$@3 (53)
    en la izquierda: 5, en la derecha: 6
Declar_variables_locales (54)
    en la izquierda: 7 8, en la derecha: 6
Cuerpo_variables (55)
    en la izquierda: 9 10, en la derecha: 7 9
Declar_variables (56)
    en la izquierda: 12 13, en la derecha: 9 10
$@4 (57)
    en la izquierda: 11, en la derecha: 12
Tipo (58)
    en la izquierda: 14 15, en la derecha: 12
Tipo_dato (59)
    en la izquierda: 16, en la derecha: 14 17
Tipo_lista (60)
    en la izquierda: 17, en la derecha: 15
Lista_ident (61)
    en la izquierda: 18 19 20, en la derecha: 12 18 19 101
Declar_funciones (62)
    en la izquierda: 21 22, en la derecha: 6 21
Cabecera_funcion (63)
    en la izquierda: 24 25, en la derecha: 27
$@5 (64)
    en la izquierda: 23, en la derecha: 24
Declar_funcion (65)
    en la izquierda: 27, en la derecha: 21
$@6 (66)
    en la izquierda: 26, en la derecha: 27
Lista_parametros (67)
    en la izquierda: 29 30 31 32, en la derecha: 24 29 30
$@7 (68)
    en la izquierda: 28, en la derecha: 29
Parametro (69)
    en la izquierda: 33, en la derecha: 29 30 31
Sentencias (70)
    en la izquierda: 34 35, en la derecha: 6 34
Sentencia (71)
    en la izquierda: 36 37 38 39 40 41 42 43 44 45, en la derecha:
    34 35 88 90 93 99
Sentencia_asig (72)
    en la izquierda: 46, en la derecha: 37 99
Lista_expresiones (73)
    en la izquierda: 47 48 49, en la derecha: 47 48 67
Expresion (74)
    en la izquierda: 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65
    66, en la derecha: 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60
    61 62 87 93 99 105 107 108 109
Funcion (75)
    en la izquierda: 67 68, en la derecha: 64
Constante (76)
    en la izquierda: 69 70 71 72 73, en la derecha: 65
Constante_lista (77)
    en la izquierda: 74 75 76 77 78, en la derecha: 73
Lista_bool (78)
    en la izquierda: 79 80, en la derecha: 74 79
Lista_car (79)
    en la izquierda: 81 82, en la derecha: 75 81
Lista_ent (80)
    en la izquierda: 83 84, en la derecha: 76 83
Lista_real (81)
    en la izquierda: 85 86, en la derecha: 77 85
Condicion_if (82)
    en la izquierda: 87, en la derecha: 88 90
Sentencia_if (83)
    en la izquierda: 88 90, en la derecha: 38
$@8 (84)
    en la izquierda: 89, en la derecha: 90
Sentencia_while (85)
    en la izquierda: 93, en la derecha: 39
$@9 (86)
    en la izquierda: 91, en la derecha: 93
$@10 (87)
    en la izquierda: 92, en la derecha: 93
Sentencia_for (88)
    en la izquierda: 99, en la derecha: 40
$@11 (89)
    en la izquierda: 94, en la derecha: 99
$@12 (90)
    en la izquierda: 95, en la derecha: 99
$@13 (91)
    en la izquierda: 96, en la derecha: 99
$@14 (92)
    en la izquierda: 97, en la derecha: 99
$@15 (93)
    en la izquierda: 98, en la derecha: 99
Sentencia_entrada (94)
    en la izquierda: 101, en la derecha: 41
$@16 (95)
    en la izquierda: 100, en la derecha: 101
Sentencia_salida (96)
    en la izquierda: 102, en la derecha: 42
Lista_expr_cadena (97)
    en la izquierda: 103 104, en la derecha: 102 103
Expr_cadena (98)
    en la izquierda: 105 106, en la derecha: 103 104
Sentencia_return (99)
    en la izquierda: 107, en la derecha: 43
Sentencia_iterar (100)
    en la izquierda: 108, en la derecha: 44
Sentencia_comienzo (101)
    en la izquierda: 109, en la derecha: 45


Estado 0

    0 $accept: . Programa $end

    $default  reduce usando la regla 1 ($@1)

    Programa  ir al estado 1
    $@1       ir al estado 2


Estado 1

    0 $accept: Programa . $end

    $end  desplazar e ir al estado 3


Estado 2

    3 Programa: $@1 . Cabecera $@2 Bloque

    INICIO  desplazar e ir al estado 4

    Cabecera  ir al estado 5


Estado 3

    0 $accept: Programa $end .

    $default  aceptar


Estado 4

    4 Cabecera: INICIO . PAREN_IZQ PAREN_DER

    PAREN_IZQ  desplazar e ir al estado 6


Estado 5

    3 Programa: $@1 Cabecera . $@2 Bloque

    $default  reduce usando la regla 2 ($@2)

    $@2  ir al estado 7


Estado 6

    4 Cabecera: INICIO PAREN_IZQ . PAREN_DER

    PAREN_DER  desplazar e ir al estado 8


Estado 7

    3 Programa: $@1 Cabecera $@2 . Bloque

    LLAVE_IZQ  desplazar e ir al estado 9

    Bloque  ir al estado 10


Estado 8

    4 Cabecera: INICIO PAREN_IZQ PAREN_DER .

    $default  reduce usando la regla 4 (Cabecera)


Estado 9

    6 Bloque: LLAVE_IZQ . $@3 Declar_variables_locales Declar_funciones Sentencias LLAVE_DER

    $default  reduce usando la regla 5 ($@3)

    $@3  ir al estado 11


Estado 10

    3 Programa: $@1 Cabecera $@2 Bloque .

    $default  reduce usando la regla 3 (Programa)


Estado 11

    6 Bloque: LLAVE_IZQ $@3 . Declar_variables_locales Declar_funciones Sentencias LLAVE_DER

    VAR_IZQ  desplazar e ir al estado 12

    $default  reduce usando la regla 8 (Declar_variables_locales)

    Declar_variables_locales  ir al estado 13


Estado 12

    7 Declar_variables_locales: VAR_IZQ . Cuerpo_variables VAR_DER

    error      desplazar e ir al estado 14
    TIPO       desplazar e ir al estado 15
    TIPO_LIST  desplazar e ir al estado 16

    Cuerpo_variables  ir al estado 17
    Declar_variables  ir al estado 18
    Tipo              ir al estado 19
    Tipo_dato         ir al estado 20
    Tipo_lista        ir al estado 21


Estado 13

    6 Bloque: LLAVE_IZQ $@3 Declar_variables_locales . Declar_funciones Sentencias LLAVE_DER

    $default  reduce usando la regla 22 (Declar_funciones)

    Declar_funciones  ir al estado 22


Estado 14

   13 Declar_variables: error .

    $default  reduce usando la regla 13 (Declar_variables)


Estado 15

   16 Tipo_dato: TIPO .

    $default  reduce usando la regla 16 (Tipo_dato)


Estado 16

   17 Tipo_lista: TIPO_LIST . Tipo_dato

    TIPO  desplazar e ir al estado 15

    Tipo_dato  ir al estado 23


Estado 17

    7 Declar_variables_locales: VAR_IZQ Cuerpo_variables . VAR_DER
    9 Cuerpo_variables: Cuerpo_variables . Declar_variables

    error      desplazar e ir al estado 14
    VAR_DER    desplazar e ir al estado 24
    TIPO       desplazar e ir al estado 15
    TIPO_LIST  desplazar e ir al estado 16

    Declar_variables  ir al estado 25
    Tipo              ir al estado 19
    Tipo_dato         ir al estado 20
    Tipo_lista        ir al estado 21


Estado 18

   10 Cuerpo_variables: Declar_variables .

    $default  reduce usando la regla 10 (Cuerpo_variables)


Estado 19

   12 Declar_variables: Tipo . $@4 Lista_ident DELIMIT

    $default  reduce usando la regla 11 ($@4)

    $@4  ir al estado 26


Estado 20

   14 Tipo: Tipo_dato .

    $default  reduce usando la regla 14 (Tipo)


Estado 21

   15 Tipo: Tipo_lista .

    $default  reduce usando la regla 15 (Tipo)


Estado 22

    6 Bloque: LLAVE_IZQ $@3 Declar_variables_locales Declar_funciones . Sentencias LLAVE_DER
   21 Declar_funciones: Declar_funciones . Declar_funcion

    error        desplazar e ir al estado 27
    MAS_MENOS    desplazar e ir al estado 28
    OP_UNARIO    desplazar e ir al estado 29
    PAREN_IZQ    desplazar e ir al estado 30
    CORCH_IZQ    desplazar e ir al estado 31
    LLAVE_IZQ    desplazar e ir al estado 9
    TIPO         desplazar e ir al estado 32
    IDENT        desplazar e ir al estado 33
    CONST_BOOL   desplazar e ir al estado 34
    CONST_CAR    desplazar e ir al estado 35
    CONST_ENT    desplazar e ir al estado 36
    CONST_REAL   desplazar e ir al estado 37
    COND_SI      desplazar e ir al estado 38
    BUCLE        desplazar e ir al estado 39
    FOR_INI      desplazar e ir al estado 40
    ENTRADA      desplazar e ir al estado 41
    SALIDA       desplazar e ir al estado 42
    DEVUELVE     desplazar e ir al estado 43
    OP_INI_LIST  desplazar e ir al estado 44

    Bloque              ir al estado 45
    Cabecera_funcion    ir al estado 46
    Declar_funcion      ir al estado 47
    Sentencias          ir al estado 48
    Sentencia           ir al estado 49
    Sentencia_asig      ir al estado 50
    Expresion           ir al estado 51
    Funcion             ir al estado 52
    Constante           ir al estado 53
    Constante_lista     ir al estado 54
    Condicion_if        ir al estado 55
    Sentencia_if        ir al estado 56
    Sentencia_while     ir al estado 57
    Sentencia_for       ir al estado 58
    Sentencia_entrada   ir al estado 59
    Sentencia_salida    ir al estado 60
    Sentencia_return    ir al estado 61
    Sentencia_iterar    ir al estado 62
    Sentencia_comienzo  ir al estado 63


Estado 23

   17 Tipo_lista: TIPO_LIST Tipo_dato .

    $default  reduce usando la regla 17 (Tipo_lista)


Estado 24

    7 Declar_variables_locales: VAR_IZQ Cuerpo_variables VAR_DER .

    $default  reduce usando la regla 7 (Declar_variables_locales)


Estado 25

    9 Cuerpo_variables: Cuerpo_variables Declar_variables .

    $default  reduce usando la regla 9 (Cuerpo_variables)


Estado 26

   12 Declar_variables: Tipo $@4 . Lista_ident DELIMIT

    IDENT  desplazar e ir al estado 64

    Lista_ident  ir al estado 65


Estado 27

   25 Cabecera_funcion: error .
   66 Expresion: error .

    LLAVE_IZQ  reduce usando la regla 25 (Cabecera_funcion)
    $default   reduce usando la regla 66 (Expresion)


Estado 28

   52 Expresion: MAS_MENOS . Expresion

    error       desplazar e ir al estado 66
    MAS_MENOS   desplazar e ir al estado 28
    OP_UNARIO   desplazar e ir al estado 29
    PAREN_IZQ   desplazar e ir al estado 30
    CORCH_IZQ   desplazar e ir al estado 31
    IDENT       desplazar e ir al estado 67
    CONST_BOOL  desplazar e ir al estado 34
    CONST_CAR   desplazar e ir al estado 35
    CONST_ENT   desplazar e ir al estado 36
    CONST_REAL  desplazar e ir al estado 37

    Expresion        ir al estado 68
    Funcion          ir al estado 52
    Constante        ir al estado 53
    Constante_lista  ir al estado 54


Estado 29

   51 Expresion: OP_UNARIO . Expresion

    error       desplazar e ir al estado 66
    MAS_MENOS   desplazar e ir al estado 28
    OP_UNARIO   desplazar e ir al estado 29
    PAREN_IZQ   desplazar e ir al estado 30
    CORCH_IZQ   desplazar e ir al estado 31
    IDENT       desplazar e ir al estado 67
    CONST_BOOL  desplazar e ir al estado 34
    CONST_CAR   desplazar e ir al estado 35
    CONST_ENT   desplazar e ir al estado 36
    CONST_REAL  desplazar e ir al estado 37

    Expresion        ir al estado 69
    Funcion          ir al estado 52
    Constante        ir al estado 53
    Constante_lista  ir al estado 54


Estado 30

   50 Expresion: PAREN_IZQ . Expresion PAREN_DER

    error       desplazar e ir al estado 66
    MAS_MENOS   desplazar e ir al estado 28
    OP_UNARIO   desplazar e ir al estado 29
    PAREN_IZQ   desplazar e ir al estado 30
    CORCH_IZQ   desplazar e ir al estado 31
    IDENT       desplazar e ir al estado 67
    CONST_BOOL  desplazar e ir al estado 34
    CONST_CAR   desplazar e ir al estado 35
    CONST_ENT   desplazar e ir al estado 36
    CONST_REAL  desplazar e ir al estado 37

    Expresion        ir al estado 70
    Funcion          ir al estado 52
    Constante        ir al estado 53
    Constante_lista  ir al estado 54


Estado 31

   74 Constante_lista: CORCH_IZQ . Lista_bool CORCH_DER
   75                | CORCH_IZQ . Lista_car CORCH_DER
   76                | CORCH_IZQ . Lista_ent CORCH_DER
   77                | CORCH_IZQ . Lista_real CORCH_DER
   78                | CORCH_IZQ . CORCH_DER

    CORCH_DER   desplazar e ir al estado 71
    CONST_BOOL  desplazar e ir al estado 72
    CONST_CAR   desplazar e ir al estado 73
    CONST_ENT   desplazar e ir al estado 74
    CONST_REAL  desplazar e ir al estado 75

    Lista_bool  ir al estado 76
    Lista_car   ir al estado 77
    Lista_ent   ir al estado 78
    Lista_real  ir al estado 79


Estado 32

   24 Cabecera_funcion: TIPO . IDENT $@5 PAREN_IZQ Lista_parametros PAREN_DER

    IDENT  desplazar e ir al estado 80


Estado 33

   46 Sentencia_asig: IDENT . IGUAL Expresion
   63 Expresion: IDENT .
   67 Funcion: IDENT . PAREN_IZQ Lista_expresiones PAREN_DER
   68        | IDENT . PAREN_IZQ PAREN_DER

    PAREN_IZQ  desplazar e ir al estado 81
    IGUAL      desplazar e ir al estado 82

    $default  reduce usando la regla 63 (Expresion)


Estado 34

   69 Constante: CONST_BOOL .

    $default  reduce usando la regla 69 (Constante)


Estado 35

   70 Constante: CONST_CAR .

    $default  reduce usando la regla 70 (Constante)


Estado 36

   71 Constante: CONST_ENT .

    $default  reduce usando la regla 71 (Constante)


Estado 37

   72 Constante: CONST_REAL .

    $default  reduce usando la regla 72 (Constante)


Estado 38

   87 Condicion_if: COND_SI . PAREN_IZQ Expresion PAREN_DER

    PAREN_IZQ  desplazar e ir al estado 83


Estado 39

   93 Sentencia_while: BUCLE . $@9 PAREN_IZQ Expresion PAREN_DER $@10 Sentencia

    $default  reduce usando la regla 91 ($@9)

    $@9  ir al estado 84


Estado 40

   99 Sentencia_for: FOR_INI . $@11 Sentencia_asig $@12 FOR_STOP Expresion $@13 FOR_STEP $@14 Expresion $@15 FOR_DO Sentencia

    $default  reduce usando la regla 94 ($@11)

    $@11  ir al estado 85


Estado 41

  101 Sentencia_entrada: ENTRADA . $@16 Lista_ident

    $default  reduce usando la regla 100 ($@16)

    $@16  ir al estado 86


Estado 42

  102 Sentencia_salida: SALIDA . Lista_expr_cadena

    error         desplazar e ir al estado 66
    MAS_MENOS     desplazar e ir al estado 28
    OP_UNARIO     desplazar e ir al estado 29
    PAREN_IZQ     desplazar e ir al estado 30
    CORCH_IZQ     desplazar e ir al estado 31
    IDENT         desplazar e ir al estado 67
    CONST_BOOL    desplazar e ir al estado 34
    CONST_CAR     desplazar e ir al estado 35
    CONST_CADENA  desplazar e ir al estado 87
    CONST_ENT     desplazar e ir al estado 36
    CONST_REAL    desplazar e ir al estado 37

    Expresion          ir al estado 88
    Funcion            ir al estado 52
    Constante          ir al estado 53
    Constante_lista    ir al estado 54
    Lista_expr_cadena  ir al estado 89
    Expr_cadena        ir al estado 90


Estado 43

  107 Sentencia_return: DEVUELVE . Expresion

    error       desplazar e ir al estado 66
    MAS_MENOS   desplazar e ir al estado 28
    OP_UNARIO   desplazar e ir al estado 29
    PAREN_IZQ   desplazar e ir al estado 30
    CORCH_IZQ   desplazar e ir al estado 31
    IDENT       desplazar e ir al estado 67
    CONST_BOOL  desplazar e ir al estado 34
    CONST_CAR   desplazar e ir al estado 35
    CONST_ENT   desplazar e ir al estado 36
    CONST_REAL  desplazar e ir al estado 37

    Expresion        ir al estado 91
    Funcion          ir al estado 52
    Constante        ir al estado 53
    Constante_lista  ir al estado 54


Estado 44

  109 Sentencia_comienzo: OP_INI_LIST . Expresion

    error       desplazar e ir al estado 66
    MAS_MENOS   desplazar e ir al estado 28
    OP_UNARIO   desplazar e ir al estado 29
    PAREN_IZQ   desplazar e ir al estado 30
    CORCH_IZQ   desplazar e ir al estado 31
    IDENT       desplazar e ir al estado 67
    CONST_BOOL  desplazar e ir al estado 34
    CONST_CAR   desplazar e ir al estado 35
    CONST_ENT   desplazar e ir al estado 36
    CONST_REAL  desplazar e ir al estado 37

    Expresion        ir al estado 92
    Funcion          ir al estado 52
    Constante        ir al estado 53
    Constante_lista  ir al estado 54


Estado 45

   36 Sentencia: Bloque .

    $default  reduce usando la regla 36 (Sentencia)


Estado 46

   27 Declar_funcion: Cabecera_funcion . $@6 Bloque

    $default  reduce usando la regla 26 ($@6)

    $@6  ir al estado 93


Estado 47

   21 Declar_funciones: Declar_funciones Declar_funcion .

    $default  reduce usando la regla 21 (Declar_funciones)


Estado 48

    6 Bloque: LLAVE_IZQ $@3 Declar_variables_locales Declar_funciones Sentencias . LLAVE_DER
   34 Sentencias: Sentencias . Sentencia

    error        desplazar e ir al estado 66
    MAS_MENOS    desplazar e ir al estado 28
    OP_UNARIO    desplazar e ir al estado 29
    PAREN_IZQ    desplazar e ir al estado 30
    CORCH_IZQ    desplazar e ir al estado 31
    LLAVE_IZQ    desplazar e ir al estado 9
    LLAVE_DER    desplazar e ir al estado 94
    IDENT        desplazar e ir al estado 33
    CONST_BOOL   desplazar e ir al estado 34
    CONST_CAR    desplazar e ir al estado 35
    CONST_ENT    desplazar e ir al estado 36
    CONST_REAL   desplazar e ir al estado 37
    COND_SI      desplazar e ir al estado 38
    BUCLE        desplazar e ir al estado 39
    FOR_INI      desplazar e ir al estado 40
    ENTRADA      desplazar e ir al estado 41
    SALIDA       desplazar e ir al estado 42
    DEVUELVE     desplazar e ir al estado 43
    OP_INI_LIST  desplazar e ir al estado 44

    Bloque              ir al estado 45
    Sentencia           ir al estado 95
    Sentencia_asig      ir al estado 50
    Expresion           ir al estado 51
    Funcion             ir al estado 52
    Constante           ir al estado 53
    Constante_lista     ir al estado 54
    Condicion_if        ir al estado 55
    Sentencia_if        ir al estado 56
    Sentencia_while     ir al estado 57
    Sentencia_for       ir al estado 58
    Sentencia_entrada   ir al estado 59
    Sentencia_salida    ir al estado 60
    Sentencia_return    ir al estado 61
    Sentencia_iterar    ir al estado 62
    Sentencia_comienzo  ir al estado 63


Estado 49

   35 Sentencias: Sentencia .

    $default  reduce usando la regla 35 (Sentencias)


Estado 50

   37 Sentencia: Sentencia_asig . DELIMIT

    DELIMIT  desplazar e ir al estado 96


Estado 51

   53 Expresion: Expresion . MAS_MENOS Expresion
   54          | Expresion . OP_BIN_LISTA Expresion
   55          | Expresion . OP_LIST_CONCA Expresion
   56          | Expresion . OP_OR Expresion
   57          | Expresion . OP_XOR Expresion
   58          | Expresion . OP_AND Expresion
   59          | Expresion . OP_RELACION Expresion
   60          | Expresion . OP_IGUALDAD Expresion
   61          | Expresion . OP_MULTI_DIV Expresion
   62          | Expresion . MAS_MAS Expresion OP_GET_LIST Expresion
  108 Sentencia_iterar: Expresion . OP_AVR_RETR

    OP_OR          desplazar e ir al estado 97
    OP_XOR         desplazar e ir al estado 98
    OP_AND         desplazar e ir al estado 99
    OP_IGUALDAD    desplazar e ir al estado 100
    OP_RELACION    desplazar e ir al estado 101
    MAS_MENOS      desplazar e ir al estado 102
    MAS_MAS        desplazar e ir al estado 103
    OP_LIST_CONCA  desplazar e ir al estado 104
    OP_BIN_LISTA   desplazar e ir al estado 105
    OP_MULTI_DIV   desplazar e ir al estado 106
    OP_AVR_RETR    desplazar e ir al estado 107


Estado 52

   64 Expresion: Funcion .

    $default  reduce usando la regla 64 (Expresion)


Estado 53

   65 Expresion: Constante .

    $default  reduce usando la regla 65 (Expresion)


Estado 54

   73 Constante: Constante_lista .

    $default  reduce usando la regla 73 (Constante)


Estado 55

   88 Sentencia_if: Condicion_if . Sentencia
   90             | Condicion_if . Sentencia COND_OTRO $@8 Sentencia

    error        desplazar e ir al estado 66
    MAS_MENOS    desplazar e ir al estado 28
    OP_UNARIO    desplazar e ir al estado 29
    PAREN_IZQ    desplazar e ir al estado 30
    CORCH_IZQ    desplazar e ir al estado 31
    LLAVE_IZQ    desplazar e ir al estado 9
    IDENT        desplazar e ir al estado 33
    CONST_BOOL   desplazar e ir al estado 34
    CONST_CAR    desplazar e ir al estado 35
    CONST_ENT    desplazar e ir al estado 36
    CONST_REAL   desplazar e ir al estado 37
    COND_SI      desplazar e ir al estado 38
    BUCLE        desplazar e ir al estado 39
    FOR_INI      desplazar e ir al estado 40
    ENTRADA      desplazar e ir al estado 41
    SALIDA       desplazar e ir al estado 42
    DEVUELVE     desplazar e ir al estado 43
    OP_INI_LIST  desplazar e ir al estado 44

    Bloque              ir al estado 45
    Sentencia           ir al estado 108
    Sentencia_asig      ir al estado 50
    Expresion           ir al estado 51
    Funcion             ir al estado 52
    Constante           ir al estado 53
    Constante_lista     ir al estado 54
    Condicion_if        ir al estado 55
    Sentencia_if        ir al estado 56
    Sentencia_while     ir al estado 57
    Sentencia_for       ir al estado 58
    Sentencia_entrada   ir al estado 59
    Sentencia_salida    ir al estado 60
    Sentencia_return    ir al estado 61
    Sentencia_iterar    ir al estado 62
    Sentencia_comienzo  ir al estado 63


Estado 56

   38 Sentencia: Sentencia_if .

    $default  reduce usando la regla 38 (Sentencia)


Estado 57

   39 Sentencia: Sentencia_while .

    $default  reduce usando la regla 39 (Sentencia)


Estado 58

   40 Sentencia: Sentencia_for .

    $default  reduce usando la regla 40 (Sentencia)


Estado 59

   41 Sentencia: Sentencia_entrada . DELIMIT

    DELIMIT  desplazar e ir al estado 109


Estado 60

   42 Sentencia: Sentencia_salida . DELIMIT

    DELIMIT  desplazar e ir al estado 110


Estado 61

   43 Sentencia: Sentencia_return . DELIMIT

    DELIMIT  desplazar e ir al estado 111


Estado 62

   44 Sentencia: Sentencia_iterar . DELIMIT

    DELIMIT  desplazar e ir al estado 112


Estado 63

   45 Sentencia: Sentencia_comienzo . DELIMIT

    DELIMIT  desplazar e ir al estado 113


Estado 64

   20 Lista_ident: IDENT .

    $default  reduce usando la regla 20 (Lista_ident)


Estado 65

   12 Declar_variables: Tipo $@4 Lista_ident . DELIMIT
   18 Lista_ident: Lista_ident . SEPAR IDENT
   19            | Lista_ident . error IDENT

    error    desplazar e ir al estado 114
    DELIMIT  desplazar e ir al estado 115
    SEPAR    desplazar e ir al estado 116


Estado 66

   66 Expresion: error .

    $default  reduce usando la regla 66 (Expresion)


Estado 67

   63 Expresion: IDENT .
   67 Funcion: IDENT . PAREN_IZQ Lista_expresiones PAREN_DER
   68        | IDENT . PAREN_IZQ PAREN_DER

    PAREN_IZQ  desplazar e ir al estado 81

    $default  reduce usando la regla 63 (Expresion)


Estado 68

   52 Expresion: MAS_MENOS Expresion .
   53          | Expresion . MAS_MENOS Expresion
   54          | Expresion . OP_BIN_LISTA Expresion
   55          | Expresion . OP_LIST_CONCA Expresion
   56          | Expresion . OP_OR Expresion
   57          | Expresion . OP_XOR Expresion
   58          | Expresion . OP_AND Expresion
   59          | Expresion . OP_RELACION Expresion
   60          | Expresion . OP_IGUALDAD Expresion
   61          | Expresion . OP_MULTI_DIV Expresion
   62          | Expresion . MAS_MAS Expresion OP_GET_LIST Expresion

    $default  reduce usando la regla 52 (Expresion)


Estado 69

   51 Expresion: OP_UNARIO Expresion .
   53          | Expresion . MAS_MENOS Expresion
   54          | Expresion . OP_BIN_LISTA Expresion
   55          | Expresion . OP_LIST_CONCA Expresion
   56          | Expresion . OP_OR Expresion
   57          | Expresion . OP_XOR Expresion
   58          | Expresion . OP_AND Expresion
   59          | Expresion . OP_RELACION Expresion
   60          | Expresion . OP_IGUALDAD Expresion
   61          | Expresion . OP_MULTI_DIV Expresion
   62          | Expresion . MAS_MAS Expresion OP_GET_LIST Expresion

    $default  reduce usando la regla 51 (Expresion)


Estado 70

   50 Expresion: PAREN_IZQ Expresion . PAREN_DER
   53          | Expresion . MAS_MENOS Expresion
   54          | Expresion . OP_BIN_LISTA Expresion
   55          | Expresion . OP_LIST_CONCA Expresion
   56          | Expresion . OP_OR Expresion
   57          | Expresion . OP_XOR Expresion
   58          | Expresion . OP_AND Expresion
   59          | Expresion . OP_RELACION Expresion
   60          | Expresion . OP_IGUALDAD Expresion
   61          | Expresion . OP_MULTI_DIV Expresion
   62          | Expresion . MAS_MAS Expresion OP_GET_LIST Expresion
